<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1C3AA9"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_new"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:includeFontPadding="false"
            android:fontFamily="@font/nunito_bold"
            android:gravity="bottom"
            android:textSize="15pt"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/sign_in_sing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_margin="5dp"
                android:onClick="loginFacebook"
                android:drawableLeft="@drawable/ic_facebook_square"
                android:paddingLeft="20dp"
                android:text="@string/login_facebook"
                android:textColor="@color/blue_facebook"
                android:fontFamily="@font/nunito_bold"
                android:background="@drawable/backgroud_facebook"
                android:layout_width="314dp"
                android:layout_height="58dp"/>
            <Button
                android:layout_margin="5dp"
                android:id="@+id/google_sign_in"
                android:drawableLeft="@drawable/ic_google_plus_square"
                android:paddingLeft="20dp"
                android:text="@string/login_google"
                android:textColor="@color/red_google"
                android:fontFamily="@font/nunito_bold"
                android:background="@drawable/backgroud_google"
                android:layout_width="314dp"
                android:layout_height="58dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>