<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ConsultationActivity"
    android:padding="10dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_user" />
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/doctor_name"
                android:textSize="12pt"
                android:textColor="@color/title_black"
                android:text="Alexandre Santos"
                android:fontFamily="@font/nunito_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/doctor_specialization"
                android:textSize="8pt"
                android:textColor="@color/title_black"
                android:text="Cardiologista"
                android:fontFamily="@font/nunito_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="8pt"
        android:textColor="@color/title_black"
        android:text="@string/data_e_hora"
        android:fontFamily="@font/nunito_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/date_picker"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:layout_width="wrap_content"
        android:layout_weight="0.6"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:cursorVisible="false"
        android:textAlignment="center"
        android:backgroundTint="@color/colorPrimaryDark" />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spin_time"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.4"
            android:minHeight="50dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="8pt"
        android:textColor="@color/title_black"
        android:text="@string/plano_de_saude"
        android:fontFamily="@font/nunito_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spin_insurence"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="8pt"
        android:textColor="@color/title_black"
        android:text="@string/sintomas"
        android:fontFamily="@font/nunito_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/symptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:lines="3"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:scrollHorizontally="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/schedule"
            android:text="@string/schedule"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_consultation"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>